my-apps/arr-stack/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: radarr
  labels:
    app: radarr
  annotations:
    ignore-check.kube-linter.io/run-as-non-root: "Application requires root for PUID/PGID mapping at startup"
    ignore-check.kube-linter.io/no-read-only-root-fs: "Legacy application requires writeable root for internal updates/logging"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
      annotations:
        backup.velero.io/backup-volumes-excludes: media-root,appdata
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.4.4.10685-ls319
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: media-root
              mountPath: /media
            - name: appdata
              mountPath: /config
              subPath: appdata/linuxserver-radarr-2/config
      volumes:
        - name: media-root
          persistentVolumeClaim:
            claimName: pvc-media-library
        - name: appdata
          persistentVolumeClaim:
            claimName: pvc-appdata
