my-apps/arr-stack/radarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - name: http
      port: 7878
      targetPort: 7878
